feat(scripts): add format.sh and lint.sh
format.sh rewrites sources. lint.sh is read-only and gates on two things:
that every file matches the formatter, and that Checkstyle is clean.
Verified it exits non-zero on a misformatted file and leaves the working
tree untouched.

The auto-format hook has never actually run: it was guarded on
tools/google-java-format.jar, which was never created. It now points at
the built Bazel launcher, which executes standalone without starting a
Bazel server — so editing a file cannot contend for the Bazel lock with a
build already in flight. It stays dormant until the first build.

CLAUDE.md's Format and Lint rows were marked "not wired yet" in the
previous PR because they named commands that did not run. They now name
commands that do.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QpXfR9jiGj5Z1nYyyK3ALr